<resources>
    <string name="app_name">Квест</string>

    <!--Сообщения о пустых списках-->
    <string name="quests_is_empty">
        Список доступных квестов - пуст, повторите попытку позже..
    </string>

    <string name="user_quests_is_empty">
        На данный момент, ваш список квестов - пуст.
        Попробуйте добавить квест, нажав на кнопку внизу экрана
    </string>


    <!-- Strings related to registration -->
    <!-- Strings related to login -->
    <string name="prompt_name">Имя</string>
    <string name="prompt_your_name">Ваше имя</string>
    <string name="prompt_phone">Телефон</string>
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>


    <string name="action_sign_in">Войти</string>
    <string name="action_confirm">Принять</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="action_register">Регистрация</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Неверный логин</string>
    <string name="invalid_login">Неверный логин</string>
    <string name="invalid_password">Пароль должен быть > 5 символов</string>
    <string name="invalid_name">Некорректное имя</string>
    <string name="invalid_phone">Некорректный телефон</string>
    <string name="login_failed">"Ошибка авторизации"</string>

    <string name="title_activity_maps">Карта</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Главное</string>
    <string name="second_fragment_label">Геометки</string>
    <string name="next">Вперёд</string>
    <string name="previous">Назад</string>

    <!-- Шапка в навигации -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Проходи квесты, и выполняй задания!</string>

    <!-- Навигация -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Главное</string>
    <string name="menu_events">Квесты</string>
    <string name="my_quests">Мои квесты</string>
    <string name="menu_map">Карта</string>

    <string name="menu_gallery">ffsdf</string>
    <string name="menu_slideshow">sdf</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_password_or_username">Неверный логин или пароль</string>
    <string name="exit">Выйти</string>
    <string name="error_user_is_unlogged">Пользователь не авторизован</string>

    <string name="camera_permission_required">Требуется разрешение на съёмку</string>
    <string name="location_permission_required">Требуется разрешение на геопозицию</string>
    <string name="camera_permission_granted">Разрешение на съёмку дано</string>
    <string name="location_permission_granted">Разрешение на геопозицию дано</string>
    <string name="ok">OK</string>
    <string name="add_quest">Добавление квеста</string>
    <string name="show_list_current_tasks">Показать список текущих задач</string>
    <string name="tasks_is_empty_warn_message">Отсутствуют задачи, выберите другой квест</string>
    <string name="warn">Предупреждение</string>
    <string name="btn_close_text">Закрыть</string>
</resources>