<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kvest2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.kvest2.ui.quest.QuestFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/quest_fragment" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.kvest2.ui.map.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />
</navigation>